# oyunum

./: .gitignore  .gitmodules  CMakeLists.txt  LuaBinding.h  Makefile  README.md  debug.cpp  game.cpp  game.h  getdata.sh  getsocketlib.sh  lb_color.h  lb_font.h  lb_renderlist.h  lb_text.h  renderlist.h  script.lua  setup.sh  text.h  updatedata.sh
cmake/: Findallegro.cmake
doc/: script api.html  script api.md  script_classes.html
lua/: CMakeLists.txt
scripts/: autocomplete.lua  class.lua  dozipfile.lua  events.lua  game.lua  gensprites.lua  keycodes.lua  magic_cliffs.lua  main.lua  misc.lua  packatlas.lua  sprite.lua  tasks.lua  test.lua
scripts/gui/: button.lua  gui.lua  test.lua  widget.lua
src/: bindings.cpp  bitmap.cpp  bitmap.h  boot.cpp  colortext.cpp  colortext.h  config.h  console.cpp  console.h  debug.cpp  debug.h  editstring.cpp  editstring.h  font.h  game.cpp  game.h  kosh.cpp  lb_bitmap.h  lb_color.h  lb_dirlist.cpp  lb_dirlist.h  lb_font.h  lb_renderlist.h  lb_template.h  lb_text.h  lb_tilegrid.h  lb_tileset.h  luainterpreter.cpp  luainterpreter.h  rectangle.h  renderlist.h  text.h  tilegrid.cpp  tilegrid.h  tileset.cpp  tileset.h
